# resin

./: .gitignore  .gitlab-ci.yml  .justfile  Cargo.toml  README.md  dist-workspace.toml  resin.toml
.github/workflows/: release.yml
src/: cli.rs  conf.rs  git.rs  inputs.rs  main.rs  utils.rs
src/conf/: conf.rs  mod.rs  old.rs  scope.rs  toml.rs  type_.rs
src/templates/: de.template  en.template
wix/: main.wxs
