[package]
name = "resin"
version = "1.6.6"
description = "Superfast CLI for the conventional commits commit format"
authors = ["Internal: Daniel Matthes <dmatthes@multamedio.de>", "Original: Matt Gleich <email@mattglei.ch>"]
repository = "https://github.com/MM-Learning-Solutions-AG/resin"
homepage = "https://github.com/MM-Learning-Solutions-AG/resin/"
license = "MPL-2.0"
edition = "2021"
keywords = ["cli", "commit", "git", "standardization"]

[package.metadata.wix]
upgrade-guid = "69FFEEDD-002B-4F4F-9D8F-1375731D80D7"
path-guid = "B352C5FA-3608-4A10-B63D-C5A0D7C4D590"
license = false
eula = false

[dependencies]
anyhow = "1.0.80"
toml = "0.5.11"
serde = { version = "1.0.197", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
colored = "2.1.0"
itertools = "0.10.5"
directories = "4.0.1"
configparser = "3.0.4"
clap = { version = "3.2.25", features = ["cargo"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
console = "0.15.8"
regex = "1.10.3"
edit = "0.1.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
