[package]
name = "resin"
version = "1.6.13"
description = "Superfast CLI for the conventional commits commit format"
authors = [
	"Daniel Borgs <daniel.borgs@noxa.de.de>",
	"Matt Gleich <email@mattglei.ch>",
]
repository = "https://github.com/failpark/resin"
homepage = "https://github.com/failpark/resin/"
license = "MPL-2.0"
edition = "2021"
keywords = ["cli", "commit", "git", "standardization"]

[package.metadata.wix]
upgrade-guid = "69FFEEDD-002B-4F4F-9D8F-1375731D80D7"
path-guid = "B352C5FA-3608-4A10-B63D-C5A0D7C4D590"
license = false
eula = false

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["cargo", "derive", "color"] }
colored = "2.2.0"
configparser = "3.1.0"
console = "0.15.10"
ctrlc = { version = "3.4.5", features = ["termination"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "history"] }
directories = "5.0.1"
edit = "0.1.5"
git2 = { version = "0.19.0", features = ["vendored-libgit2"] }
# itertools = "0.13.0"
pretty_assertions = "1.4.1"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
sys-locale = "0.3.2"
toml = "0.8.19"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
